# faceflip-server

./: .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_TO_VERCEL.md  Dockerfile  Makefile  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOY_GUIDE.md  commit_changes.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh  vercel-env.example  vercel.json
api/: index.py
app/: __init__.py  main.py
app/api/: routes.py
app/api/endpoints/: auth.py  faceflip.py  health.py  order.py  users.py
app/core/: __init__.py  auth_config.py  config.py  dependencies.py  logging_config.py  response.py  response_code.py  security.py
app/middleware/: __init__.py  auth.py  error_handler.py  logging.py
app/models/: user.py
app/schemas/: auth.py  common.py  face_flip.py  user.py
app/services/: auth_service.py  image_generation_service.py  user_service.py
app/utils/: file_handler.py  helpers.py  validators.py
docs/: ARK_API_SETUP.md  AUTHENTICATION.md  FRONTEND_EXAMPLE.md  FRONTEND_INTEGRATION.md  GLOBAL_AUTH.md  IMAGE_GENERATION_API.md  IMAGE_GENERATION_SUPABASE_INTEGRATION.md  JAVA_PYTHON_MAPPING.md  LOGGING.md  MIGRATION_TO_GLOBAL_AUTH.md  RESPONSE_FORMAT.md  SSE_JWT_AUTH.md  SSE_PARSING_FIX.md  SUPABASE_AUTH_INTEGRATION.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md
tests/: conftest.py  test_main.py
ui/: README.md  SUPABASE_CONFIG.md  package.json
ui/src/: App.vue  style.css  supabase.js
ui/src/components/: AuthForm.vue  DebugPage.vue  ImageUpload.vue  UserProfile.vue
ui/src/composables/: useAuth.js
(+1 files in other folders)
