[project]
name = "face-flip-server"
version = "0.1.0"
description = "Face Flip Server - FastAPI backend service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.22.0",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.26.0,<0.29",
    "black>=24.10.0",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
